[package]
name = "rust-image-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
image = "0.24.5"
imageproc = "0.23.0"
log = "0.4.17"
logging_timer = "1.1.0"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"

[dev-dependencies]
proptest = "1.0.0"
